# inkwise

./: .gitignore  AGENT.md  AGENTS.md  AI写作助手-UI设计方案.md  CHANGELOG.md  DESIGN-PROJECT-WRITING.md  DESIGN.md  LICENSE  README-EN.md  README.md  TEST_REPORT.md  deploy.yaml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/embedding/: embed.mjs
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  db.rs  image_gen.rs  lib.rs  project_indexer.rs  publisher.rs  skill.rs  store.rs
src-tauri/src/agent/: engine.rs  mod.rs  prompt.rs  tools.rs  types.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: collection_cmds.rs  document_cmds.rs  mod.rs
src-tauri/src/domain/: collection.rs  document.rs  mod.rs  package.rs  provider.rs  publish.rs  settings.rs  skill.rs
src-tauri/src/platform/: mod.rs  wechat.rs
src-tauri/src/project_indexer/: mod.rs  scanner.rs  snapshot.rs  synthesizer.rs  types.rs  watcher.rs
src-tauri/src/skill/: builtins.rs  frontmatter.rs  mod.rs  store.rs  types.rs
src-tauri/src/storage/: app_storage.rs  migration.rs  mod.rs  sqlite.rs
src-tauri/src/vector/: chunk.rs  embedder.rs  indexer.rs  mod.rs  search.rs  types.rs
src-tauri/tree-sitter-queries/code-snippet/: go.scm  java.scm  python.scm  rust.scm  typescript.scm
src-tauri/tree-sitter-queries/import/: python.scm  rust.scm  typescript.scm
src-tauri/tree-sitter-queries/root-context/class_declaration/: python.scm  typescript.scm
(+332 files in other folders)
