[package]
name = "app"
version = "2.0.0"
description = "AI 写作助手"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
notify = "6.1"
notify-debouncer-mini = "0.4"

tree-sitter = "0.24"
streaming-iterator = "0.1.9"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
sha2 = "0.10"
hex = "0.4"

# 纯 Rust ONNX 推理引擎，零系统依赖，全平台通用
tract-onnx = "0.23"
tokenizers = "0.21"
ndarray = "0.17"
